<resources>
    <string name="app_name">StarBucks</string>
    <string name="page_title">What\'s new</string>
    <string name="whats_new_image">whats_new_image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_label">Home</string>
    <string name="pay_label">Pay</string>
    <string name="order_label">Order</string>
    <string name="favorite_label">Favorite</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="order_drink">음료</string>
    <string name="order_food">푸드</string>
    <string name="order_item">상품</string>
    <string name="food_fragment">food fragment</string>
    <string name="image">image</string>
    <string name="badge">best</string>
    <string name="favorite_title">나만의 메뉴</string>

</resources>