<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.OderFragment"
        android:id="@+id/orderFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/lo_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_order_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/lo_appbar"
            app:layout_constraintHeight_percent="0.1"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:text="@string/order_label"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_order_tab"
            android:layout_width="0dp"
            android:layout_height="40dp"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_order_label"
            >
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_drink"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/order_drink" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_food"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/order_food"/>

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/order_item"/>

        </com.google.android.material.tabs.TabLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fcv_order"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tl_order_tab"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>